# invest-note

./: .dockerignore  .env.example  .gitignore  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  Makefile  PLAN.md  PROJECT.md  README.md  TODO.md  TODOS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  version.json
api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
api/alembic/: baseline_schema.sql  env.py  script.py.mako
api/scripts/: diagnose_data_go_kr.py  export_supabase_auth.sql  import_auth_identities.py  import_user_profiles.py  seed_demo_data.py  seed_kr_stocks.py  seed_stocks.py  seed_us_stocks.py
api/tests/: conftest.py  fake_pool.py  test_accounts.py  test_admin_board.py  test_admin_crud.py  test_analysis.py  test_analysis_logic.py  test_app_config.py  test_assets_router.py  test_auth_flow_integration.py  test_auth_identity.py  test_auth_identity_db.py  test_auth_router.py  test_be_token.py  test_board.py  test_board_reads_db.py  test_board_repo.py  test_board_submit.py  test_broker_capture_encryption.py  test_broker_capture_realdb.py  test_broker_parsers.py  test_cors.py  test_daily_price_seed.py  test_daily_prices_repo.py  test_fx_convert.py  test_holdings.py  test_import_auth_identities.py  test_import_staging_repo.py  test_import_user_profiles.py  test_issuer_registry.py  test_kis.py  test_legacy_api_prefix.py  test_live_update.py  test_me.py  test_naver_search.py  test_nps_seed.py  test_oauth_providers.py  test_openfigi.py  test_pnl_sync.py  test_portfolio.py  (+20 more)
(+1138 files in other folders)
