[tool.poetry]
name = "invest-note-api"
version = "1.3.3"
description = "FastAPI backend for invest-note"
authors = ["jwlee <support@pixelwave.app>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pyjwt = { extras = ["crypto"], version = "^2.9" }
pydantic-settings = "^2.6"
asyncpg = "^0.30"
alembic = "^1.14"
psycopg = { extras = ["binary"], version = "^3.2" }
cachetools = "^5.3"
openpyxl = "^3.1"
pdfplumber = "^0.11"
python-multipart = "^0.0.12"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
types-cachetools = "^5.3"
ruff = "^0.15.11"


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
